<?xml version="1.0" encoding="utf-8"?><!-- 2340*1080分辨率--><!--主页面-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.conch.validation.activity.LoginActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/login_title"
        android:textColor="@color/black"
        android:textSize="18sp" />


    <LinearLayout
        android:layout_marginTop="64dp"
        style="@style/login_ll">

        <ImageView
            style="@style/login_iv"
            android:src="@mipmap/ic_launcher" />

        <EditText
            android:id="@+id/et_login_user_name"
            style="@style/login_et"
            android:hint="@string/login_user_name"
            android:inputType="number"
            android:singleLine="true" />

    </LinearLayout>

    <LinearLayout style="@style/login_ll">

        <ImageView
            style="@style/login_iv"
            android:src="@mipmap/ic_launcher" />

        <EditText
            android:id="@+id/et_login_user_phone"
            style="@style/login_et"
            android:hint="@string/login_user_phone"
            android:inputType="phone"
            android:singleLine="true" />

    </LinearLayout>

    <RelativeLayout
        android:background="@drawable/login_input_box"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp">

        <EditText
            android:id="@+id/et_login_verification_code"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:gravity="center|left"
            android:paddingLeft="8dp"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_login_get_verification_code"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|right"
            android:paddingRight="16dp"
            android:text="@string/get_verification_code"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </RelativeLayout>


    <Button
        android:layout_marginTop="64dp"
        android:id="@+id/bt_login"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@color/black"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/textColorPrimary"
        android:textSize="16sp" />


</LinearLayout>
